# pinout-overview

./: .gitignore  README.MD  README.md  atpack_pinout.py  extract_variants.py  pinout.py  pyproject.toml  setup.py
atpack/: da.json  dd14.json  dd14_20.csv
pinoutOverview/: config.py  functions.py  packages.py  page.py  pinouts.py  pins.py  shapes.py  utils.py
pinouts/defaults/: pin_qfn.yaml
pinouts/dxcore/: README.md  build_footprints.py  extract_variants.py
pinouts/dxcore/dd14_20/: AVR16_32DD14_20_p17.txt  device.csv  qfp20.yaml  quad20_pins.yaml  soic14.yaml  soic14_pins.yaml  soic20.yaml  soic20_pins.yaml  vqfn20.yaml  vqfn20_text.yaml
pinouts/dxcore/default/: label_qfn.yaml  label_quad.yaml  package_qfn.yaml  package_qfp.yaml  pin_qfn.yaml  pin_qfp.yaml  pin_types.yaml
pinouts/dxcore/junk/: table_extract.py
src/examples/: atpack_pinout.py  pin_test.py  pinout.py  textbox.py
src/examples/atpack/: dd14.json
src/examples/dxcore/: dx_pinout.py  page.py
src/examples/template/: dxcore_functions.py  dxcore_label.py  tengo_functions.json
src/examples/tengo10/: pinout.py
src/examples/test/: pin_test.py
src/examples/variant/: DD20_qfn.json  DD20_qfp.json  DD20_soic.json
src/pinoutOverview/: __init__.py  config.py  functions.py  packages.py  pads.py  pinouts.py  pins.py  utils.py
src/test/: factory.py  test_functions.py
template/: dxcore.py  dxcore_functions.py  dxcore_page.py  packages.py  page.py
templates/: qfn.py  quad_label.py
variant/: DD20.json  DD20_sop.json
variants/: dd14_20.py  megaavr_functions.py
(+19 files in other folders)
